notification page html css

--- a/index.html
+++ b/index.html
@@ -1,51 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Notifications page</title>
+  <link rel="stylesheet" href="index.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <div class="container">
+    <div class="navbar">
+      <h3>Notifications</h3>
+      <button id="first">3</button>
 
-  Notifications 3
+      <button id="second">Mark all as read</button>
+    </div>
+    <div class="first">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-mark-webber.webp">
+      <div class="inner">
 
-  Mark all as read
+        <p><span id="name">Mark Webber</span> reacted to your recent post <span id="txt">My first tournament
+            today!</span></p>
+        <span id="time"> 1m ago</span>
+      </div>
 
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
 
-  Angela Gray followed you
-  5m ago
 
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
+    </div>
+    <div class="second">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-angela-gray.webp">
+      <div class="inner">
 
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
+        <p><span id="name">Angela Gray</span> followed you</p>
+        <span id="time"> 5m ago</span>
+      </div>
 
-  Kimberly Smith commented on your picture
-  1 week ago
 
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
+    </div>
+    <div class="third">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-jacob-thompson.webp">
+      <div class="inner">
 
-  Anna Kim left the group Chess Club
-  2 weeks ago
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <p><span id="name">Jacob Thompson</span> has joined your group <span id="txt">Chess Club</span></p>
+        <span id="time"> 1 day ago</span>
+      </div>
+
+
+    </div>
+    <div class="fourth">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-rizky-hasanuddin.webp">
+      <div class="inner">
+
+        <p><span id="name">Rizky Hasanuddin</span> sent you a private message</p>
+        <span id="time">5 days ago</span>
+        <div class="txt">
+          Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
+          I'm already having lots of fun and improving my game.
+        </div>
+      </div>
+
+
+
+
+    </div>
+    <div class="fifth">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-kimberly-smith.webp">
+      <div class="inner">
+
+        <p><span id="name">Kimberly Smith</span> commented on your picture</p>
+        <span id="time">1 week ago</span>
+      </div>
+      <img id="img2" src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\image-chess.webp">
+
+
+    </div>
+    <div class="sixth">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-nathan-peterson.webp">
+      <div class="inner">
+
+        <p>
+          <span id="name">Nathan Peterson</span> reacted to your recent post <span id="txt">5 end-game strategies to
+            increase your win rate</span>
+        </p>
+        <span id="time">2 weeks ago</span>
+      </div>
+
+
+    </div>
+    <div class="seventh">
+      <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-anna-kim.webp">
+      <div class="inner">
+
+        <p><span id="name">Anna Kim</span> left the group <span>Chess Club</span> </p>
+        <span id="time"> 2 weeks ago</span>
+      </div>
+
+
+    </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
