notification page updates

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       <div class="inner">
 
         <p><span id="name">Mark Webber</span> reacted to your recent post <span id="txt">My first tournament
-            today!</span></p>
+            today!</span><span class="red-dot"></span></p>
         <span id="time"> 1m ago</span>
+        
       </div>
 
 
@@ -37,7 +38,7 @@
       <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-angela-gray.webp">
       <div class="inner">
 
-        <p><span id="name">Angela Gray</span> followed you</p>
+        <p><span id="name">Angela Gray</span> followed you<span class="red-dot"></span></p>
         <span id="time"> 5m ago</span>
       </div>
 
@@ -47,7 +48,7 @@
       <img src="C:\Users\karan\OneDrive\Desktop\notifications-page-main\assets\images\avatar-jacob-thompson.webp">
       <div class="inner">
 
-        <p><span id="name">Jacob Thompson</span> has joined your group <span id="txt">Chess Club</span></p>
+        <p><span id="name">Jacob Thompson</span> has joined your group <span id="txt">Chess Club</span><span class="red-dot"></span></p>
         <span id="time"> 1 day ago</span>
       </div>
 
